--- a/index.html
+++ b/index.html
@@ -6,152 +6,190 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 20px;
+            margin: 0; /* Remove default body margin */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+            background-color: #f4f4f4; /* Light background color */
+        }
+
+        .container {
             max-width: 600px;
+            padding: 30px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            text-align: center; /* Center content inside the container */
+        }
+
+        h1 {
+            color: #333;
+            margin-bottom: 20px;
         }
 
         form {
             display: flex;
             flex-direction: column;
+            align-items: stretch; /* Stretch form elements to full width */
         }
 
         label {
             margin: 10px 0 5px;
             font-weight: bold;
+            color: #555;
+            text-align: left;
         }
 
         input, select {
-            padding: 8px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
+            padding: 12px;
+            border-radius: 6px;
+            border: 1px solid #ddd;
+            margin-bottom: 15px;
+            font-size: 16px;
+            color: #333;
         }
 
         button {
-            margin-top: 15px;
-            padding: 10px;
+            margin-top: 20px;
+            padding: 14px;
             cursor: pointer;
-            background-color: maroon;
+            background-color: #800000; /* Maroon */
             color: #fff;
             border: none;
-            border-radius: 4px;
+            border-radius: 6px;
+            font-size: 18px;
+            transition: background-color 0.3s; /* Smooth transition for hover */
         }
 
         button:hover {
-            background-color: #800000;
+            background-color: #A94442;
         }
 
         .thank-you {
-            margin-top: 20px;
+            margin-top: 30px;
             font-weight: bold;
             color: green;
+            font-size: 18px;
+        }
+
+        /* Added styles for the admin link */
+        .admin-link {
+            margin-top: 20px;
+            font-size: 16px;
+        }
+
+        .admin-link a {
+            color: #007bff; /* Blue color for the link */
+            text-decoration: none; /* Remove underline */
+        }
+
+        .admin-link a:hover {
+            text-decoration: underline; /* Add underline on hover */
         }
     </style>
 </head>
 <body>
-    <h1>Bowling Player Registration</h1>
-    <form id="registrationForm">
-        <label for="playerName">Player Name:</label>
-        <input type="text" id="playerName" name="playerName" required />
+    <div class="container">
+        <h1>Bowling Player Registration</h1>
+        <form id="registrationForm">
+            <label for="playerName">Player Name:</label>
+            <input type="text" id="playerName" name="playerName" required />
 
-        <label for="dob">Date of Birth:</label>
-        <input type="date" id="dob" name="dob" required />
+            <label for="dob">Date of Birth:</label>
+            <input type="date" id="dob" name="dob" required />
 
-        <!-- Phone Number Fields -->
-        <label for="playerPhone">Player Phone Number:</label>
-        <input type="tel" id="playerPhone" name="playerPhone" required />
+            <!-- Phone Number Fields -->
+            <label for="playerPhone">Player Phone Number:</label>
+            <input type="tel" id="playerPhone" name="playerPhone" required />
 
-        <label for="fatherPhone">Father/Guardian Phone Number:</label>
-        <input type="tel" id="fatherPhone" name="fatherPhone" required />
+            <label for="fatherPhone">Father/Guardian Phone Number:</label>
+            <input type="tel" id="fatherPhone" name="fatherPhone" required />
 
-        <!-- Clothing Sizes -->
-        <label for="clothingSize">Clothing Size (General):</label>
-        <select id="clothingSize" name="clothingSize" required>
-            <option value="">-- Select Size --</option>
-            <option value="XS">XS</option>
-            <option value="S">S</option>
-            <option value="M">M</option>
-            <option value="L">L</option>
-            <option value="XL">XL</option>
-            <option value="XXL">XXL</option>
-        </select>
+            <!-- Clothing Sizes -->
+            <label for="trainingSuitSize">Training Suit Size:</label>
+            <select id="trainingSuitSize" name="trainingSuitSize" required>
+                <option value="">-- Select Size --</option>
+                <option value="XS">XS</option>
+                <option value="S">S</option>
+                <option value="M">M</option>
+                <option value="L">L</option>
+                <option value="XL">XL</option>
+                <option value="XXL">XXL</option>
+            </select>
 
-        <label for="trainingSuitSize">Training Suit Size:</label>
-        <select id="trainingSuitSize" name="trainingSuitSize" required>
-            <option value="">-- Select Size --</option>
-            <option value="XS">XS</option>
-            <option value="S">S</option>
-            <option value="M">M</option>
-            <option value="L">L</option>
-            <option value="XL">XL</option>
-            <option value="XXL">XXL</option>
-        </select>
+            <label for="jerseySize">Jersey Size:</label>
+            <select id="jerseySize" name="jerseySize" required>
+                <option value="">-- Select Size --</option>
+                <option value="XS">XS</option>
+                <option value="S">S</option>
+                <option value="M">M</option>
+                <option value="L">L</option>
+                <option value="XL">XL</option>
+                <option value="XXL">XXL</option>
+            </select>
 
-        <label for="jerseySize">Jersey Size:</label>
-        <select id="jerseySize" name="jerseySize" required>
-            <option value="">-- Select Size --</option>
-            <option value="XS">XS</option>
-            <option value="S">S</option>
-            <option value="M">M</option>
-            <option value="L">L</option>
-            <option value="XL">XL</option>
-            <option value="XXL">XXL</option>
-        </select>
+            <label for="sportsShoesSize">Sports Shoes Size:</label>
+            <select id="sportsShoesSize" name="sportsShoesSize" required>
+                <option value="">-- Select Size --</option>
+                <option value="35">35</option>
+                <option value="36">36</option>
+                <option value="37">37</option>
+                <option value="38">38</option>
+                <option value="39">39</option>
+                <option value="40">40</option>
+                <option value="41">41</option>
+                <option value="42">42</option>
+                <option value="43">43</option>
+                <option value="44">44</option>
+                <option value="45">45</option>
+                <option value="46">46</option>
+            </select>
 
-        <label for="sportsShoesSize">Sports Shoes Size:</label>
-        <select id="sportsShoesSize" name="sportsShoesSize" required>
-            <option value="">-- Select Size --</option>
-            <option value="35">35</option>
-            <option value="36">36</option>
-            <option value="37">37</option>
-            <option value="38">38</option>
-            <option value="39">39</option>
-            <option value="40">40</option>
-            <option value="41">41</option>
-            <option value="42">42</option>
-            <option value="43">43</option>
-            <option value="44">44</option>
-            <option value="45">45</option>
-            <option value="46">46</option>
-        </select>
+            <label for="bowlingShoesSize">Bowling Shoes Size:</label>
+            <select id="bowlingShoesSize" name="bowlingShoesSize" required>
+                <option value="">-- Select Size --</option>
+                <option value="35">35</option>
+                <option value="36">36</option>
+                <option value="37">37</option>
+                <option value="38">38</option>
+                <option value="39">39</option>
+                <option value="40">40</option>
+                <option value="41">41</option>
+                <option value="42">42</option>
+                <option value="43">43</option>
+                <option value="44">44</option>
+                <option value="45">45</option>
+                <option value="46">46</option>
+            </select>
 
-        <label for="bowlingShoesSize">Bowling Shoes Size:</label>
-        <select id="bowlingShoesSize" name="bowlingShoesSize" required>
-            <option value="">-- Select Size --</option>
-            <option value="35">35</option>
-            <option value="36">36</option>
-            <option value="37">37</option>
-            <option value="38">38</option>
-            <option value="39">39</option>
-            <option value="40">40</option>
-            <option value="41">41</option>
-            <option value="42">42</option>
-            <option value="43">43</option>
-            <option value="44">44</option>
-            <option value="45">45</option>
-            <option value="46">46</option>
-        </select>
+            <label for="ballWeight">Ball Weight (lbs):</label>
+            <select id="ballWeight" name="ballWeight" required>
+                <option value="">-- Select Weight --</option>
+                <option value="8">8 lbs</option>
+                <option value="9">9 lbs</option>
+                <option value="10">10 lbs</option>
+                <option value="11">11 lbs</option>
+                <option value="12">12 lbs</option>
+                <option value="13">13 lbs</option>
+                <option value="14">14 lbs</option>
+                <option value="15">15 lbs</option>
+                <option value="16">16 lbs</option>
+            </select>
 
-        <label for="ballWeight">Ball Weight (lbs):</label>
-        <select id="ballWeight" name="ballWeight" required>
-            <option value="">-- Select Weight --</option>
-            <option value="8">8 lbs</option>
-            <option value="9">9 lbs</option>
-            <option value="10">10 lbs</option>
-            <option value="11">11 lbs</option>
-            <option value="12">12 lbs</option>
-            <option value="13">13 lbs</option>
-            <option value="14">14 lbs</option>
-            <option value="15">15 lbs</option>
-            <option value="16">16 lbs</option>
-        </select>
+            <label for="playerPhoto">Player Photo:</label>
+            <input type="file" id="playerPhoto" name="playerPhoto" accept="image/*" required />
 
-        <label for="playerPhoto">Player Photo:</label>
-        <input type="file" id="playerPhoto" name="playerPhoto" accept="image/*" required />
+            <button type="submit">Register</button>
+        </form>
 
-        <button type="submit">Register</button>
-    </form>
+        <div id="thankYouMessage" class="thank-you" style="display:none;"></div>
 
-    <div id="thankYouMessage" class="thank-you" style="display:none;"></div>
+        <!-- Added link to admin page -->
+        <div class="admin-link">
+            <a href="admin.html">Go to Admin Page</a>
+        </div>
+    </div>
 
     <script>
         const registrationForm = document.getElementById('registrationForm');
@@ -165,7 +203,6 @@
             const dob = document.getElementById('dob').value;
             const playerPhone = document.getElementById('playerPhone').value;
             const fatherPhone = document.getElementById('fatherPhone').value;
-            const clothingSize = document.getElementById('clothingSize').value;
             const trainingSuitSize = document.getElementById('trainingSuitSize').value;
             const jerseySize = document.getElementById('jerseySize').value;
             const sportsShoesSize = document.getElementById('sportsShoesSize').value;
@@ -190,7 +227,6 @@
                     dob: dob,
                     playerPhone: playerPhone,
                     fatherPhone: fatherPhone,
-                    clothingSize: clothingSize,
                     trainingSuitSize: trainingSuitSize,
                     jerseySize: jerseySize,
                     sportsShoesSize: sportsShoesSize,
