--- a/admin.html
+++ b/admin.html
@@ -6,54 +6,106 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0; /* Adjusted margin for print */
-      padding: 20px; /* Added padding for better content spacing */
-      max-width: 100%; /* Ensure content fits the page */
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
     }
-    h1, h2 {
-      text-align: center; /* Center the titles */
+
+    .login-container {
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      padding: 30px;
+      text-align: center;
+      width: 400px;
     }
-    .login-section, .players-section {
-      margin-bottom: 20px;
-    }
-    .login-section label, .login-section input {
+
+    .login-section label {
       display: block;
-      margin-bottom: 5px;
+      margin-bottom: 10px;
+      font-weight: bold;
+      color: #555;
+      text-align: center; /* Center the label */
     }
+
     .login-section input {
       width: 100%;
-      max-width: 300px;
-      padding: 8px;
-      margin-bottom: 10px; /* Add space for input */
+      padding: 12px;
+      border-radius: 6px;
+      border: 1px solid #ddd;
+      margin-bottom: 20px;
+      font-size: 16px;
+      color: #333;
+      text-align: center; /* Center the input text */
     }
+
+    .login-section button {
+      padding: 14px;
+      cursor: pointer;
+      background-color: #800000; /* Maroon */
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      font-size: 18px;
+      transition: background-color 0.3s;
+      width: 100%;
+    }
+
+    .login-section button:hover {
+      background-color: #A94442;
+    }
+
+    .players-section {
+      max-width: 90%; /* Adjusted max-width to prevent horizontal overflow */
+      margin: 20px auto; /* Center the players section */
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      text-align: center;
+    }
+
+    h1, h2 {
+      text-align: center;
+    }
+
     table {
       width: 100%;
       border-collapse: collapse;
       margin-top: 10px;
     }
+
     th, td {
       border: 1px solid #ccc;
-      padding: 5px; /* Reduced padding */
+      padding: 5px;
       text-align: left;
-      font-size: 0.8rem; /* Reduced font size */
+      font-size: 0.8rem;
     }
+
     th {
       background-color: #f2f2f2;
-      font-weight: bold; /* Emphasize the header */
+      font-weight: bold;
     }
+
     .pagination {
       margin-top: 10px;
-      text-align: center; /* Center pagination buttons */
+      text-align: center;
     }
+
     .pagination button {
-      padding: 8px 12px;  /*Adjusted button padding*/
+      padding: 8px 12px;
       margin: 0 5px;
       cursor: pointer;
-      background-color: #4CAF50;  /* Green color for buttons */
+      background-color: #4CAF50;
       color: white;
       border: none;
       border-radius: 4px;
     }
+
     .hide {
       display: none;
     }
@@ -63,53 +115,96 @@
       body {
         background: #fff !important;
         color: #000 !important;
-        font-size: 10pt; /* Adjust font size for print */
-        padding: 0; /* Remove default body padding in print */
+        font-size: 10pt;
+        padding: 0;
       }
+
       .login-section, .pagination, .actions-column {
-        display: none !important; /* Hide these sections when printing */
+        display: none !important;
       }
+
       h1, h2 {
-        text-align: left !important; /* Align headers to the left in print */
+        text-align: left !important;
       }
+
       table {
         width: 100% !important;
         border-collapse: collapse;
         margin-top: 10px;
-        font-size: 10pt; /* Reduced font size */
+        font-size: 10pt;
       }
+
       th, td {
         border: 1px solid #ccc;
-        padding: 3px;  /* Further reduced padding */
+        padding: 3px;
         text-align: left;
-        font-size: 0.7rem; /* Further reduced font size */
+        font-size: 0.7rem;
       }
+
       th {
-        background-color: #f2f2f2 !important; /* Force background color in print */
+        background-color: #f2f2f2 !important;
       }
 
       /* Fix for tables spanning pages: */
       table {
-         page-break-inside:auto;
+        page-break-inside: auto;
       }
-      tr    { page-break-inside:avoid; page-break-after:auto }
-      thead { display:table-header-group }
-      tfoot { display:table-footer-group }
+
+      tr {
+        page-break-inside: avoid;
+        page-break-after: auto
+      }
+
+      thead {
+        display: table-header-group
+      }
+
+      tfoot {
+        display: table-footer-group
+      }
     }
 
-     .actions-column {
-      white-space: nowrap; /* Prevent wrapping */
-      width: 80px; /* Adjust the width as needed */
+    .actions-column {
+      white-space: nowrap;
+      width: 80px;
+    }
+
+      /* Adjustments for smaller screens */
+    @media (max-width: 600px) {
+        .login-container {
+            width: 90%;
+        }
+
+        .players-section {
+            margin: 10px auto;
+            padding: 10px;
+        }
+
+        h1 {
+            font-size: 1.5em;
+        }
+
+        th, td {
+            padding: 3px;
+            font-size: 0.7rem;
+        }
+
+        .pagination button {
+            padding: 6px 10px;
+            margin: 0 3px;
+        }
     }
   </style>
 </head>
-<body>
-  <h1>Admin Page - Registered Bowling Players</h1>
 
-  <div class="login-section">
-    <label for="adminPassword">Enter Admin Password:</label>
-    <input type="password" id="adminPassword">
-    <button id="loginBtn">Login</button>
+<body>
+  <div class="login-container">
+    <h1>Admin Login</h1>
+    <div class="login-section">
+      <label for="adminPassword">Enter Admin Password:</label>
+      <input type="password" id="adminPassword">
+      <button id="loginBtn">Login</button>
+    </div>
   </div>
 
   <div class="players-section hide">
@@ -148,6 +243,7 @@
     const loginBtn = document.getElementById('loginBtn');
     const adminPasswordInput = document.getElementById('adminPassword');
     const playersSection = document.querySelector('.players-section');
+    const loginContainer = document.querySelector('.login-container');
 
     const playersTableBody = document.querySelector('#playersTable tbody');
     const prevBtn = document.getElementById('prevBtn');
@@ -286,8 +382,8 @@
       if (inputPass === ADMIN_PASSWORD) {
         // Show players section
         playersSection.classList.remove('hide');
-        // Hide login
-        document.querySelector('.login-section').classList.add('hide');
+        // Hide login section
+        loginContainer.style.display = 'none';
         // Load players data
         loadPlayers();
       } else {
